[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsl-rl"
version = "0.1.0"
description = "Custom fork of RSL-RL used by the tracking project."
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Michael Piseno" }]

[tool.setuptools]
packages = [
    "rsl_rl",
    "rsl_rl.algorithms",
    "rsl_rl.env",
    "rsl_rl.modules",
    "rsl_rl.networks",
    "rsl_rl.runners",
    "rsl_rl.storage",
    "rsl_rl.utils",
]
package-dir = { "rsl_rl" = "." }
